--- a/1.html
+++ b/1.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>الصفحة الرئيسية</title>
     <link rel="stylesheet" href="1.css">
 </head>
 
 <body>
     <div class="header">
         <li>
-            <a href="last page.html">الصفحة الرئيسية</a>
+            <a href="1.html">الصفحة الرئيسية</a>
         </li>
         <li>
-            <a href="last page.html">جدول المبارايات</a>
+            <a href="2.html">جدول المبارايات</a>
         </li>
         <li>
-            <a href="last page.html">الفرق المشاركة</a>
+            <a href="last page.html">أخر الاخبار</a>
         </li>
         <li>
             <a href="last page.html">البلد المستضيف</a>
@@ -48,7 +48,59 @@
                 بعض القواعد في تقسيم المنتخبات، ومنها ما نص على عدم وقوع أكثر من فريقين أوروبيين في مجموعة واحدة، كما تنص على عدم وقوع أكثر من فريق واحد من كل اتحاد قاري آخر في مجموعة واحدة، لتجنيب منتخبات القارة الواحدة من المواجهة المبكرة في مجموعة
                 واحدة. وبسبب عدم تساوي المنتخبات في الأوعية الأربعة</p>
         </div>
+        <div class="footer">
+
+            <div class="footer-txt txt1">
+                <h4>Accommodation</h4>
+                <ul>
+                    <li><a href="#">Hostels</a></li>
+                    <li><a href="#">Hotels</a></li>
+                    <li><a href="#">Bed and Breakfast</a></li>
+                </ul>
+                <br>
+                <br>
+                <h4>Customer Support</h4>
+                <ul>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt2">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Group Bookings</a></li>
+                    <li><a href="#">Booking Guarantee</a></li>
+                    <li><a href="#">Hostel Awards</a></li>
+                    <li><a href="#">Airport Transfers</a></li>
+                    <li><a href="#">Car Rentals</a></li>
+                    <li><a href="#">Flights</a></li>
+                    <li><a href="#">Tours & Experiences</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt3">
+                <h4>About Us</h4>
+                <ul>
+                    <li><a href="#">Hostelworld Group PLC</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Hostel Sign Up</a></li>
+                    <li><a href="#">Affiliate Program</a></li>
+                    <li><a href="#">Hostelworld Inbox</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt4">
+                <h4>Follow us on</h4>
+                <br>
+                <img src="images/Social.png" alt="">
+                <br>
+                <br>
+                <h4>App available on</h4>
+                <br>
+                <img src="images/app.png" alt="">
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
