--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
             <a href="2.html">جدول المبارايات</a>
         </li>
         <li>
-            <a href="last page.html">أخر الاخبار</a>
+            <a href="3.html">أخر الاخبار</a>
         </li>
         <li>
             <a href="last page.html">البلد المستضيف</a>
