--- a/2.html
+++ b/2.html
@@ -18,7 +18,7 @@
             <a href="2.html">جدول المبارايات</a>
         </li>
         <li>
-            <a href="last page.html">أخر الاخبار</a>
+            <a href="3.html">أخر الاخبار</a>
         </li>
         <li>
             <a href="last page.html">البلد المستضيف</a>
@@ -29,7 +29,7 @@
 
         <p class="lo">World Cub 2022</p>
         <img class="logo" src="images/2.svg">
-    </div><br><br><br><br><br><br>
+    </div>
 
     <p class="para">جدول المبارايات</p>
     <div class="big">
