--- a/4.html
+++ b/4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>البلد المستضيف</title>
     <link rel="stylesheet" href="4.css"> </head>
 
 <body>
@@ -20,7 +20,7 @@
             <a href="3.html">أخر الاخبار</a>
         </li>
         <li>
-            <a href="last page.html">البلد المستضيف</a>
+            <a href="4.html">البلد المستضيف</a>
         </li>
         <li>
             <a href="last page.html">القرعة</a>
@@ -29,7 +29,74 @@
         <p class="lo">World Cub 2022</p>
         <img class="logo" src="images/2.svg">
     </div>
-    <p class="one">المدن و الملاعب المستضيفة</p>
+    <div class="big">
+        <p class="one">المدن و الملاعب المستضيفة</p>
+        <div class="dad">
+            <div class="on">
+                <img src="images/map.png" class="map">
+                <p class="two">تم الإفصاح عن الملاعب الخمس الجدد، وهي ملعب الخور وملعب الشمال وملعب الوكرة وملعب الغرافة وملعب أحمد بن علي. سيضم الاستاد تقنية التبريد لتخفيض درجة الحرارة في الملاعب إلى 20 درجة. وقد أعلنت اللجنة المنظمة للملف القطري بأنه بعد انتهاء البطولة
+                    سيتم فك الأدوار العلوية والتبرع بها لدول أخرى فقيرة، حيث أن تعداد سكان قطر أصغر بكثير من الحاجة الاستيعابية للملاعب. تم تصميم الخمس ملاعب الجديدة من قبل الألماني ألبرت سبير وشركاه.</p>
+            </div>
+        </div>
+        <p class="tt">البنية التحتية</p>
+        <div class="rr">
+            المطارات تم تجهيز مطار حمد الدولي لمدينة الدوحة حيث إن مساحته 12 ضعفا من المطار الحالي ، وقد تم افتتاحه في عام 2014، والذي سيستمر توسيعه ليصبح واحدا من أكبر المطارات ليخدم طيران القطرية وغيرها من شركات الطيران، ومدرج الطائرات يعتبر الأكبر في الشرق الأوسط،
+            تم افتتاحه في 27 من مايو عام 2014. السكك الحديدية تقوم شركه الرّيل القطريه وشركه دوتش بان الألمانية بتعاون على بناء سكك حديديه في قطر حيث تكون أفضل سكك في العالم وتتكون هذه المشاريع من ثلاث أنواع مترو الدوحة: وهي سكه قطارات في أرجاء مدينه
+            الدوحة علما بان السكك ستكون تحت الأرض لكي لا تزدحم المدينة وتتكون هذه الشبكة التحت أرضيته من 145 محطه واربع خطوط وتعتبر هذه الشبكة الأهم. قطار المسافات الطويلة: هذه القطارات سريعه حيث سرعتها تصل إلى 220 كم/س ،تصل العاصمة القطريه بالمدن المجاورة
+            وتواصل مسيرها إلى المملكة العربية السعودية ومملكة البحرين الناقل الخفيف: هي شبكه خفيفه شبيهه بالترام وهي مخططه لتخدم مدينه لوسيل الحديثة وجزء من اللؤلؤه ، وغيرها شبكه في المدينة التعليمية (قطر فاونديشن) ومشروع مشيرب أيضاً.
+        </div>
+        <div class="footer">
+
+            <div class="footer-txt txt1">
+                <h4>Accommodation</h4>
+                <ul>
+                    <li><a href="#">Hostels</a></li>
+                    <li><a href="#">Hotels</a></li>
+                    <li><a href="#">Bed and Breakfast</a></li>
+                </ul>
+                <br>
+                <br>
+                <h4>Customer Support</h4>
+                <ul>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt2">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Group Bookings</a></li>
+                    <li><a href="#">Booking Guarantee</a></li>
+                    <li><a href="#">Hostel Awards</a></li>
+                    <li><a href="#">Airport Transfers</a></li>
+                    <li><a href="#">Car Rentals</a></li>
+                    <li><a href="#">Flights</a></li>
+                    <li><a href="#">Tours & Experiences</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt3">
+                <h4>About Us</h4>
+                <ul>
+                    <li><a href="#">Hostelworld Group PLC</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Hostel Sign Up</a></li>
+                    <li><a href="#">Affiliate Program</a></li>
+                    <li><a href="#">Hostelworld Inbox</a></li>
+                </ul>
+            </div>
+            <div class="footer-txt txt4">
+                <h4>Follow us on</h4>
+                <br>
+                <img src="images/Social.png" alt="">
+                <br>
+                <br>
+                <h4>App available on</h4>
+                <br>
+                <img src="images/app.png" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
