--- a/3.html
+++ b/3.html
@@ -21,7 +21,7 @@
             <a href="3.html">أخر الاخبار</a>
         </li>
         <li>
-            <a href="last page.html">البلد المستضيف</a>
+            <a href="4.html">البلد المستضيف</a>
         </li>
         <li>
             <a href="last page.html">القرعة</a>
