--- a/5.html
+++ b/5.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الصفحة الرئيسية</title>
-    <link rel="stylesheet" href="1.css">
-</head>
+    <title>Document</title>
+    <link rel="stylesheet" href="5.css"> </head>
 
 <body>
     <div class="header">
@@ -30,24 +29,9 @@
         <p class="lo">World Cub 2022</p>
         <img class="logo" src="images/2.svg">
     </div>
-
     <div class="dad">
-        <div class="one">
-            <p class="on"><span>
-        كأس العالم </span><br> سوف تكون بطولة كأس العالم لكرة القدم 2022 البطولة الثانية والعشرين من بطولات كأس العالم لكرة القدم وستستضيفها قطر. وقد تم الإعلان عن المستضيف بتاريخ 2 ديسمبر 2010.</p>
-        </div>
-        <div class="two">
-            <p class="tw"><span>
-        في 22 مايو 2019 </span><br> رفض الاتحاد الدولي لكرة القدم فكرة زيادة عدد الفرق المشاركة في كأس العالم 2022 إلى 48 منتخبًا، وقرر الإبقاء على مشاركة 32 ممثلًا فقط من القارات المختلفة.
-            </p>
-        </div><br>
-        <div class="three">
-            <p class="th"><span>
-        نظام البطولة</span> <br>بطولة كأس العالم 2022 تضم 32 منتخباً من قارات العالم الست. تتنافس هذه المنتخبات لمدة شهر كامل في أرض الدولة المضيفة لنيل شرف الفوز بلقب البطولة. المرحلة الأولى من المنافسات تبدأ بدور المجموعات. ويتكون دور المجموعات من 8
-                مجموعات، حيث ستلعب كل أربعة منتخبات في مجموعة واحدة، يتأهل بطلها ووصيفه إلى الدور المقبل. ويتم تقسم المنتخبات المشاركة على أربعة مستويات بالاعتماد على تصنيف الفيفا العالمي للمنتخبات وطبقا لمعايير رياضية وجغرافية. ومنذ عام 1998 تم إقرار
-                بعض القواعد في تقسيم المنتخبات، ومنها ما نص على عدم وقوع أكثر من فريقين أوروبيين في مجموعة واحدة، كما تنص على عدم وقوع أكثر من فريق واحد من كل اتحاد قاري آخر في مجموعة واحدة، لتجنيب منتخبات القارة الواحدة من المواجهة المبكرة في مجموعة
-                واحدة. وبسبب عدم تساوي المنتخبات في الأوعية الأربعة</p>
-        </div>
+        <p>القرعة</p>
+        <img src="images/6.jpg" class="img">
         <div class="footer">
 
             <div class="footer-txt txt1">
@@ -100,7 +84,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
