--- a/3.html
+++ b/3.html
@@ -24,7 +24,7 @@
             <a href="4.html">البلد المستضيف</a>
         </li>
         <li>
-            <a href="last page.html">القرعة</a>
+            <a href="5.html">القرعة</a>
         </li>
 
         <p class="lo">World Cub 2022</p>
